refactor(ui): add compatibility layer for IntelliJ 2024.1
Introduce ActionToolbarCompatibleUtils and FileEditorManagerListenerBridge
to handle differences between IntelliJ 233 and 241 versions. Update build
configuration to support multiple IntelliJ versions. Refactor action toolbar
handling and file editor listeners to use new compatibility utilities.